--- a/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
@@ -1,43 +1,61 @@
 ﻿@model string
 
-    <section class="bg-dark-1 text-light" style="background-size: cover; background-repeat: no-repeat;">
-        <div class="container" style="background-size: cover; background-repeat: no-repeat;">
+<section class="bg-light text-dark m-5 p-5">
+    <div class="container">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+                <div class="display-3 fw-bold pt-2"><div class="text-warning">Japanese</div> Community in Victoria</div>
 
-            <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <h1><strong class="text-warning">Japanese</strong> Community in Victoria</h1>
-                    <p>The Japanese community in Victoria has undergone significant changes over the past century. Initial immigration was sparse due to restrictions from both Japan and Australian policies. Despite these barriers, the community began to grow, only to face internment and deportation during World War II. The post-war era saw a slow recovery with the arrival of Japanese war brides, and the community's population began to rise steadily. The cessation of the White Australia policy marked a new era of growth and by 2016, the Japan-born population in Victoria reached 8,515. Today, the Japanese community is an established part of Victoria's social fabric, contributing culturally and economically, notably through annual cultural festivals and a variety of community organizations.</p>
-                </div>
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                <p class="fs-5">The Japanese community in Victoria has undergone significant changes over the past century. Initial immigration was sparse due to restrictions from both Japan and Australian policies. Despite these barriers, the community began to grow, only to face internment and deportation during World War II. The post-war era saw a slow recovery with the arrival of Japanese war brides, and the community's population began to rise steadily. The cessation of the White Australia policy marked a new era of growth and by 2016, the Japan-born population in Victoria reached 8,515. Today, the Japanese community is an established part of Victoria's social fabric, contributing culturally and economically, notably through annual cultural festivals and a variety of community organizations.</p>
+            </div>
 
-                            <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="30 " data-speed="3000">30</span></h3>
-                                    <h4>1891 <br>Population</h4>
-                                </div>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="container">
+                            <div class="row">
+                                <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/2.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="New Born">
+
                             </div>
-                        </div>
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="spacer-double" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="8515" data-speed="3000">8,515</span></h3>
-                                    <h4>2016<br>Population</h4>
-                                </div>
+                            <div class="row p-4">
+
+                                <div class="fw-bold display-5">30</div>
+                                <hr>
+                                <div class="fs-5">1891 Population</div>
                             </div>
-                            <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+
                         </div>
+
+                    </div>
+                    <div class="col-md-6">
+
+                        <div class="container">
+                            <div class="row p-4">
+                                <div class="fw-bold display-5">8,515</div>
+                                <hr>
+                                <div class="fs-5">2016 Population</div>
+                            </div>
+                            <div class="row">
+                                <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/1.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="1861">
+
+
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
-
             </div>
+
+
         </div>
-    </section>
+    </div>
+</section>
+
+
+
+
+
     <section class="timeline" id="japan-timeline">
         <div class="container">
             <div class="row">
