--- a/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
@@ -1,42 +1,53 @@
 ﻿@model string
 
-    <section class="bg-grey text-dark" style="background-size: cover; background-repeat: no-repeat;">
-        <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-
-            <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
-
-                            <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="14798" data-speed="3000">14,798</span></h3>
-                                    <h4>Victorians<br>born in South Korea</h4>
+    <section class="bg-light m-5 p-5 text-dark">
+        <div class="container">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="container">
+                                <div class="row">
+                                    <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/1.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="New Born">
+                                </div>
+                                <div class="row p-4">
+                                    <div class="fw-bold display-5"><span class="timer" data-to="160652" data-speed="3000">14,798</span>+</div>
+                                    <hr>
+                                    <div class="fs-5">Victorians<br>born in South Korea</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="spacer-double" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="60" data-speed="3000">60</span>%</h3>
-                                    <h4>Christian<br>faith among Koreans</h4>
+                        <div class="col-md-6">
+                            <div class="container">
+                                <div class="row p-4">
+        
+                                    <div class="fw-bold display-5"><span class="timer" data-to="7" data-speed="3000">60</span>%</div>
+                                    <hr>
+                                    <div class="fs-5">Christian<br>faith among Koreans</div>
+                                </div>
+                                <div class="row">
+                                    <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/2.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="1861">
                                 </div>
                             </div>
-                            <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <h1><strong class="text-primary">Korea</strong> Community in Victoria </h1>
-                    <p>From humble beginnings in the late 1960s, the Korean community in Victoria has flourished into a vibrant and integral part of the state's multicultural tapestry. Initially, few Koreans settled in Victoria, but by 1971, there were already 72 individuals establishing their lives here, many migrating from third countries. Despite the challenges posed by the White Australia Policy, the Korean community saw steady growth, particularly after the policy's end, leading to a significant increase in numbers and contributions to various sectors in Victoria. Today, the community is celebrated for its cultural contributions, professional achievements, and the popular annual Korean festival that attracts thousands, enriching Victoria's cultural diversity.</p>
+                <div class="col-lg-6 ">
+                    <div class="display-3 fw-bold pt-2"><div class="text-primary">Korea</div> Community in Victoria</div>
+                    <p class="fs-5">From humble beginnings in the late 1960s, the Korean community in Victoria has flourished into a vibrant and integral part of the state's multicultural tapestry. Initially, few Koreans settled in Victoria, but by 1971, there were already 72 individuals establishing their lives here, many migrating from third countries. Despite the challenges posed by the White Australia Policy, the Korean community saw steady growth, particularly after the policy's end, leading to a significant increase in numbers and contributions to various sectors in Victoria. Today, the community is celebrated for its cultural contributions, professional achievements, and the popular annual Korean festival that attracts thousands, enriching Victoria's cultural diversity.</p>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
     <section class="timeline" id="korea-timeline">
         <div class="container">
             <div class="row">
