--- a/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
@@ -1,142 +1,149 @@
 ﻿@model string
 
-    <section class="bg-dark-1 text-light" style="background-size: cover; background-repeat: no-repeat;">
-        <div class="container" style="background-size: cover; background-repeat: no-repeat;">
 
-            <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <h1><strong class="text-info">Philipines </strong>Community in Victoria </h1>
 
-                    <p>From its modest beginnings with just 16 individuals at the start of the 20th century, the Filipino community in Victoria has witnessed profound growth and transformation, shaped by global events and shifts in Australian immigration policies. The community faced challenges, such as the deportation of Filipinos after World War II but saw opportunities for growth through education and professional recruitment in the 1950s and beyond. The significant increase in immigration during the 1970s, propelled by political unrest in the Philippines and the end of restrictive immigration policies in Australia, marked a new era of Filipino presence in Victoria. Today, the community is a vibrant and integral part of Victoria's multicultural fabric, characterized by its youthful demographic, strong Catholic faith, and significant contributions in professional and trade sectors.</p>
-                </div>
-                <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
-                            <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="25" data-speed="3000">25</span>%</h3>
-                                    <h4>Work in<br>Trades, Production and Transport</h4>
-                                </div>
+
+
+<section class="bg-light text-dark m-5 p-5">
+    <div class="container">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+                <div class="display-3 fw-bold pt-2"><div class="text-info">Philipines</div> Community in Victoria</div>
+                <p class="fs-5">From its modest beginnings with just 16 individuals at the start of the 20th century, the Filipino community in Victoria has witnessed profound growth and transformation, shaped by global events and shifts in Australian immigration policies. The community faced challenges, such as the deportation of Filipinos after World War II but saw opportunities for growth through education and professional recruitment in the 1950s and beyond. The significant increase in immigration during the 1970s, propelled by political unrest in the Philippines and the end of restrictive immigration policies in Australia, marked a new era of Filipino presence in Victoria. Today, the community is a vibrant and integral part of Victoria's multicultural fabric, characterized by its youthful demographic, strong Catholic faith, and significant contributions in professional and trade sectors.</p>
+            </div>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="container">
+                            <div class="row">
+                                <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/1.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="New Born">
                             </div>
-                        </div>
-                        <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="spacer-double" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="de_count wow fadeInUp animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">
-                                    <h3><span class="timer" data-to="73" data-speed="3000">73</span>%</h3>
-                                    <h4>Speak <br>Filipino or Tagalog <br>at home</h4>
-                                </div>
+                            <div class="row p-4">
+                                <div class="fw-bold display-5">25%</div>
+                                <hr>
+                                <div class="fs-5">Work in Trades, Production and Transport</div>
                             </div>
-                            <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <section class="timeline" id="philipines-timeline">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="site-timeline-content">
-                        <!-- Article -->
-                        <div class="de-timeline-article odd">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/early 20.jpg")" alt="The Last of us"></div>
-                                </div>
+                    <div class="col-md-6">
+                        <div class="container">
+                            <div class="row p-4">
+                                <div class="fw-bold display-5">73%</div>
+                                <hr>
+                                <div class="fs-5">Speak Filipino or Tagalog at home</div>
                             </div>
-                            <div class="content-right-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">Early 20th Century</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">The Foundation Years</h3>
-                                    <p>The Filipino community in Victoria starts with just 16 people, facing restrictions under Australian policies.</p>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
+                            <div class="row">
+                                <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/2.jpeg")" class="img-fluid " style="width:80%;height:auto;" alt="1861">
                             </div>
                         </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article even">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1950s</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">New Beginnings Under the Colombo Plan</h3>
-                                    <P>Relaxation of the White Australia Policy and the Colombo Plan brings Filipino students and skilled professionals to Victoria.</P>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1950.jpg")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
-                        </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article odd">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1970.jpg")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1970s</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">Significant Increase in Immigration.</h3>
-                                    <P>The Filipino population grows from 467 in 1971 to 3,455 by 1981, driven by the end of restrictive policies and political unrest in the Philippines.</P>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
-                        </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article even">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1981-2016</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">Remarkable Community Growth</h3>
-                                    <P>One of the most dramatic increases in Victoria's demographics, with the Filipino population reaching 51,287, supported by the Family Reunion Program.</P>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/2016.jpg")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
-                        </div>
-                        <!-- // Article -->
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+
+
+<section class="timeline" id="philipines-timeline">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+                <div class="site-timeline-content">
+                    <!-- Article -->
+                    <div class="de-timeline-article odd">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="owl-single-dots owl-carousel owl-theme">
+                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/early 20.jpg")" alt="The Last of us"></div>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">Early 20th Century</h4>
+                            </div>
+                            <div class="content-right">
+                                <h3 class="de-timeline-title">The Foundation Years</h3>
+                                <p>The Filipino community in Victoria starts with just 16 people, facing restrictions under Australian policies.</p>
+                            </div>
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article even">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1950s</h4>
+                            </div>
+                            <div class="content-right">
+                                <h3 class="de-timeline-title">New Beginnings Under the Colombo Plan</h3>
+                                <P>Relaxation of the White Australia Policy and the Colombo Plan brings Filipino students and skilled professionals to Victoria.</P>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <div class="owl-single-dots owl-carousel owl-theme">
+                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1950.jpg")" alt="The Last of us"></div>
+                            </div>
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article odd">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="owl-single-dots owl-carousel owl-theme">
+                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1970.jpg")" alt="The Last of us"></div>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1970s</h4>
+                            </div>
+                            <div class="content-right">
+                                <h3 class="de-timeline-title">Significant Increase in Immigration.</h3>
+                                <P>The Filipino population grows from 467 in 1971 to 3,455 by 1981, driven by the end of restrictive policies and political unrest in the Philippines.</P>
+                            </div>
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article even">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1981-2016</h4>
+                            </div>
+                            <div class="content-right">
+                                <h3 class="de-timeline-title">Remarkable Community Growth</h3>
+                                <P>One of the most dramatic increases in Victoria's demographics, with the Filipino population reaching 51,287, supported by the Family Reunion Program.</P>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <div class="owl-single-dots owl-carousel owl-theme">
+                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/2016.jpg")" alt="The Last of us"></div>
+                            </div>
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
