--- a/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
@@ -2,45 +2,35 @@
 
 
 <div class="bg-black text-light mt-5 pt-5" id="china-migration">
-    <div class="text-center pb-5  pt-5">
-        <h1>Migration Stories</h1>
+    <div class="container text-center pb-5 pt-5">
+        <div class="display-3 fw-bold">Migration Stories</div>
     </div>
-            <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                    </div>
-                                    <img alt="Chinese migrant Wei Liao loves living in Melbourne. Picture: Hamish Blair" src="https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3" srcset="https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3?width=150 128w, https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3?width=150 150w, https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3?width=320 320w, https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3?width=650 650w, https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3?width=1024 1024w" sizes="648px" loading="eager">
-                                </div>
-                                <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                    <h4><a class="text-light" href="https://www.heraldsun.com.au/news/victoria/future-melbourne/melbourne-is-a-city-defined-by-its-immigrant-story/news-story/a95ffde76d702d6591caea6af4087347 ">Wei Liao's New Chapter in Melbourne</a></h4>
-                                    <p class="text-light">Wei Liao's migration to Melbourne showcases a personal journey of embracing a slower pace of life, with her work at a migrant support agency underlining the city's allure for providing comfort, opportunity, and a better lifestyle for her family. Her story reflects the broader narrative of Melbourne's transformation into a multicultural hub, emphasizing the city's ability to offer growth, connection, and a sense of belonging to its diverse inhabitants.</p>
-                                </div>
-                            </div>
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://content.api.news/v3/images/bin/88836317e3e3bb88a988d2140b506ca3" alt="Chinese migrant Wei Liao loves living in Melbourne. Picture: Hamish Blair">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold" href="https://www.heraldsun.com.au/news/victoria/future-melbourne/melbourne-is-a-city-defined-by-its-immigrant-story/news-story/a95ffde76d702d6591caea6af4087347">Wei Liao's New Chapter in Melbourne</a>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                    </div>
-                                    <img sizes="(min-width: 1520px) 1008px, (min-width: 960px) calc(61.11vw + 91px), 100vw" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0005/1482692/Migrant-Lv-Changyun-and-family-walking-at-Williamstown-beach.jpg">
-                                </div>
-                                <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                    <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/lv-changyun">LV Changyun's Entrepreneurial Journey</a></h4>
-                                    <p class="text-light">Seeking a serene lifestyle away from the hustle of China, LV Changyun found both personal satisfaction and professional fulfillment in Melbourne, establishing a successful quilt manufacturing business. Motivated by providing his child with superior education and a multicultural upbringing, LV's journey highlights the transformative impact of Melbourne on migrants seeking a blend of entrepreneurial success and quality living..</p>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="card-text">Wei Liao's migration to Melbourne showcases a personal journey...</p>
                     </div>
                 </div>
             </div>
-
-
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0005/1482692/Migrant-Lv-Changyun-and-family-walking-at-Williamstown-beach.jpg" alt="LV Changyun and family">
+                    <div class="card-body">
+                        <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/lv-changyun">LV Changyun's Entrepreneurial Journey</a></div>
+                        <p class="card-text">Seeking a serene lifestyle away from the hustle of China, LV Changyun found both personal satisfaction...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
+
