--- a/TP03MainProj/Views/Education/MigrationStories/KoreaStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/KoreaStory.cshtml
@@ -1,32 +1,23 @@
 ﻿@model string
 
-    <div class="bg-black text-light mt-5 pt-5" id="korea-migration">
-        <div class="text-center pb-5  pt-5">
-            <h1>Migration Stories</h1>
-        </div>
-        <div>
-            <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img alt="" src="https://www.studymelbourne.vic.gov.au/__data/assets/image/0023/60935/Millie-Lee_4_resized.jpg" class="lazy">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://www.studymelbourne.vic.gov.au/case-studies-and-student-stories/alumni-stories/millie-sinyoung-lee">Millie Sinyoung Lee: A Culinary Journey from Seoul to Melbourne</a></h4>
-                                        <p class="text-light">Millie Lee's transition from South Korea to Melbourne is a testament to her passion for cooking, leading to a successful career pivot as a food stylist. Educated at William Angliss Institute, her skills were refined and her vision expanded, influenced by Melbourne's culinary diversity and culture. Now, aiming to make her mark in Korea's food styling scene, Millie's story is one of resilience, adaptability, and the pursuit of passion, with Melbourne playing a key role in her inspiring journey</p>
-                                    </div>
-                                </div>
-                            </div>
+<div class="bg-black text-light mt-5 pt-5" id="korea-migration">
+    <div class="container text-center pb-5 pt-5">
+        <div class="display-3 fw-bold">Migration Stories</div>
+    </div>
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://www.studymelbourne.vic.gov.au/__data/assets/image/0023/60935/Millie-Lee_4_resized.jpg" alt="Millie Sinyoung Lee in the kitchen">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold" href="https://www.studymelbourne.vic.gov.au/case-studies-and-student-stories/alumni-stories/millie-sinyoung-lee">Millie Sinyoung Lee: A Culinary Journey from Seoul to Melbourne</a>
                         </div>
 
+                        <p class="card-text">Millie Lee's transition from South Korea to Melbourne showcases her passion for cooking, leading to a successful career as a food stylist influenced by Melbourne's culinary diversity.</p>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
+</div>
