--- a/TP03MainProj/Views/Education/MigrationStories/VietnamStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/VietnamStory.cshtml
@@ -1,48 +1,33 @@
 ﻿@model string
 
-    <div class="bg-black text-light mt-5 pt-5" id="vietnam-migration">
-        <div class="text-center pb-5  pt-5">
-            <h1>Migration Stories</h1>
-        </div>
-        <div>
-            <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img alt="" src="https://insiderguides.com.au/wp-content/uploads/2020/03/Phoebe-Nguyen-3-1024x575.jpg" class="lazy">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://insiderguides.com.au/la-trobe-college-student-story/ ">Phoebe Nguyen's Transformative Path</a></h4>
-                                        <p class="text-light">From a linguist and artist in Ho Chi Minh City to a passionate nursing student in Melbourne, Phoebe Nguyen's migration story is a testament to pursuing passion and providing a brighter future for her child. Her journey underscores the supportive educational environment in Melbourne, facilitating not just academic success but also personal growth within a multicultural setting.</p>
-                                    </div>
-                                </div>
-                            </div>
+<div class="bg-black text-light mt-5 pt-5" id="vietnam-migration">
+    <div class="container text-center pb-5 pt-5">
+        <div class="display-3 fw-bold">Migration Stories</div>
+    </div>
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://insiderguides.com.au/wp-content/uploads/2020/03/Phoebe-Nguyen-3-1024x575.jpg" alt="Phoebe Nguyen">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold" href="https://insiderguides.com.au/la-trobe-college-student-story/">Phoebe Nguyen's Transformative Path</a>
                         </div>
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img alt="" src="https://study.unimelb.edu.au/__data/assets/image/0036/354897/Nhat-Duy-Dao-photo-1-1.jpg" class="lazy">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://study.unimelb.edu.au/student-life/meet-our-students/meet-nhat-bachelor-of-commerce-student">Nhat Duy Do: From Vietnam to Academic Excellence in Melbourne</a></h4>
-                                        <p class="text-light"> Nhat Duy Do's pursuit of a Bachelor of Commerce at The University of Melbourne illustrates his quest for knowledge in entrepreneurship and marketing. Awarded the Melbourne International Undergraduate Scholarship, Nhat's aspirations to contribute positively to society through sustainable business practices embody the spirit of innovation and multiculturalism that Melbourne fosters.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="card-text">Phoebe Nguyen's journey from Ho Chi Minh City to Melbourne showcases her evolution from linguist and artist to a dedicated nursing student, emphasizing Melbourne's role in her personal and professional growth.</p>
                     </div>
                 </div>
-            </section>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://study.unimelb.edu.au/__data/assets/image/0036/354897/Nhat-Duy-Dao-photo-1-1.jpg" alt="Nhat Duy Do">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold" href="https://study.unimelb.edu.au/student-life/meet-our-students/meet-nhat-bachelor-of-commerce-student">Nhat Duy Do: From Vietnam to Academic Excellence in Melbourne</a>
+                        </div>
+                        <p class="card-text">Nhat Duy Do's academic journey in Melbourne highlights his achievements in commerce, supported by an international scholarship and driven by a commitment to sustainable business practices.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </div>
+</div>
