--- a/TP03MainProj/Views/Education/MigrationStories/JapanStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/JapanStory.cshtml
@@ -3,48 +3,38 @@
 
 
 
+
+
     <div class="bg-black text-light mt-5 pt-5" id="japan-migration">
-        <div class="text-center pb-5  pt-5">
-            <h1>Migration Stories</h1>
+        <div class="container text-center pb-5 pt-5">
+            <div class="display-3 fw-bold">Migration Stories</div>
         </div>
-        <div>
-            <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img srcset="https://images.sbs.com.au/dims4/default/cb62a50/2147483647/strip/true/crop/3510x1974+0+508/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2Fa2%2Fbf%2Fa2efd20c4893a4af3aa85042460c%2Femma-sullivan-japanese-school-of-melbourne-4.jpg&amp;">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://www.sbs.com.au/language/japanese/en/podcast-episode/i-went-to-a-japanese-primary-school-in-melbourne-and-moved-between-two-worlds/8vuyh5r0x">Between Worlds: Emma Sullivan's Journey of Cultural Harmony</a></h4>
-                                        <p class="text-light">Emma Sullivan's story unfolds as a journey of cultural duality, where her years at the Japanese School of Melbourne instilled in her a deep connection to her Japanese heritage, shaping a unique identity enriched by the traditions of her ancestral roots and her Australian upbringing.</p>
-                                    </div>
-                                </div>
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <div class="card bg-transparent border-0">
+                        <img class="card-img-top fixed-size-image" srcset="https://images.sbs.com.au/dims4/default/cb62a50/2147483647/strip/true/crop/3510x1974+0+508/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2Fa2%2Fbf%2Fa2efd20c4893a4af3aa85042460c%2Femma-sullivan-japanese-school-of-melbourne-4.jpg&amp;">
+
+                        <div class="card-body">
+                            <div class="card-title">
+                                <a class="fs-5 no-underline fw-bold" href="https://www.sbs.com.au/language/japanese/en/podcast-episode/i-went-to-a-japanese-primary-school-in-melbourne-and-moved-between-two-worlds/8vuyh5r0x">Between Worlds: Emma Sullivan's Journey of Cultural Harmony</a>
                             </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img sizes="(min-width: 1520px) 1008px, (min-width: 960px) calc(61.11vw + 91px), 100vw" srcset="https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=320 320w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=360 360w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=600 600w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=960 960w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=1280 1280w" src="https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=1280">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://www.sbs.com.au/language/japanese/en/podcast-episode/there-are-more-things-i-can-do-by-myself-here-a-japanese-student-in-a-wheelchair-enjoys-her-independence-in-melbourne/gad0sinok">Uncharted Paths: Mina Mori's Journey of Independence and Inclusivity</a></h4>
-                                        <p class="text-light">Facing the challenges of disability, Mina Mori left Japan for Australia, seeking independence and embracing Melbourne's inclusive environment. Her journey, marked by a resolve to overcome accessibility barriers before her 30th birthday, turns into a mission to advocate for enhanced accessibility in Japan, inspired by the kindness and inclusivity she experienced.</p>
-                                    </div>
-                                </div>
-                            </div>
+                            <p class="card-text">Emma Sullivan's experiences at the Japanese School of Melbourne highlight her deep connection to both her Japanese roots and Australian upbringing.</p>
+
                         </div>
                     </div>
                 </div>
-            </section>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <div class="card bg-transparent border-0">
+                        <img class="card-img-top fixed-size-image" sizes="(min-width: 1520px) 1008px, (min-width: 960px) calc(61.11vw + 91px), 100vw" srcset="https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=320 320w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=360 360w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=600 600w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=960 960w, https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=1280 1280w" src="https://images.sbs.com.au/dims4/default/545ae5a/2147483647/strip/true/crop/1200x675+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F7b%2Fb4%2F006f8c0d4688a6cd127e1fa5a147%2Fsquare-4x4.jpg&amp;imwidth=1280">
+
+                        <div class="card-body">
+                            <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://www.sbs.com.au/language/japanese/en/podcast-episode/there-are-more-things-i-can-do-by-myself-here-a-japanese-student-in-a-wheelchair-enjoys-her-independence-in-melbourne/gad0sinok">Uncharted Paths: Mina Mori's Journey of Independence and Inclusivity</a></div>
+                            <p class="card-text">Mina Mori's move to Melbourne showcases her pursuit of independence and her advocacy for better accessibility, inspired by Melbourne's inclusive environment.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
