--- a/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
@@ -1,50 +1,35 @@
 ﻿@model string
 
 
-    <div class="bg-black text-light mt-5 pt-5" id="philipines-migration">
-        <div class="text-center pb-5  pt-5">
-            <h1>Migration Stories</h1>
-        </div>
-        @*story part*@
-        <div>
-            <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img alt="" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" class="lazy">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a></h4>
-                                        <p class="text-light">Discover Francisco's inspiring journey to Melbourne, where multiculturalism, opportunity, and a balanced lifestyle weave the story of a family's pursuit of happiness and contribution to a vibrant community...</p>
-                                    </div>
-                                </div>
-                            </div>
+
+<div class="bg-black text-light mt-5 pt-5" id="philipines-migration">
+    <div class="container text-center pb-5 pt-5">
+        <div class="display-3 fw-bold">Migration Stories</div>
+    </div>
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image"style=" object-position: center 30%; " src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" alt="Jojo Francisco and family in Melbourne">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold"  href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a>
                         </div>
-                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
-                                        </div>
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/mig/p2.webp")" class="lazy">
-                                    </div>
-                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                        <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">How a Filipino lime is driving inclusion in Australia</a></h4>
-                                        <p class="text-light">Driven by their personal journey of cultural discovery, Fides Mae Santos and Grace Guinto transform challenges into a mission with The Entree.Pinays, celebrating Filipino heritage and promoting cultural unity in Australia through The Calamansi Story.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="card-text">Discover Francisco's inspiring journey to Melbourne, where multiculturalism, opportunity, and a balanced lifestyle weave the story of a family's pursuit of happiness and contribution to a vibrant community.</p>
                     </div>
                 </div>
-            </section>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="@Url.Content("~/Content/Customer/images/mig/p2.webp")" alt="Fides Mae Santos and Grace Guinto">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">How a Filipino Lime is Driving Inclusion in Australia</a>
+                        </div>
+                        <p class="card-text">Driven by their personal journey of cultural discovery, Fides Mae Santos and Grace Guinto transform challenges into a mission with The Entree.Pinays, celebrating Filipino heritage and promoting cultural unity in Australia through The Calamansi Story.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </div>
+</div>
